# n-body

./: .gitignore  .gitmodules  CMakeLists (new-host-13's conflicted copy 2018-08-09).txt  CMakeLists.txt  Doxyfile  README.md  body.h  dependencies.txt  main.cpp  relationship.h  simulation.h  simulationState.cpp  simulationState.h  viewer.glade  viewport.glade
docs/: CMakeLists.txt  Doxyfile
src/: CMakeLists.txt  Config.cpp  Config.h  Configuration.cpp  Configuration.h  Controller.cpp  Controller.h  main.cpp  octant.cpp  octant.h  runner.cpp  runner.h
src/Application/: Application.cpp  Application.h  BackgroundSolver.cpp  BackgroundSolver.h  CMakeLists.txt  Logger.cpp  Logger.h  SimulationFileManager.cpp  SimulationFileManager.h  main.cpp
src/Application/Interface/: Interactive.cpp  Interactive.h  Interface.cpp  Interface.h  Simple.cpp  Simple.h
src/Application/UI/: Interactive.cpp  Interactive.h  ParticlesListModel.h  Simple.cpp  Simple.h  SimulationFileManager.cpp  SimulationFileManager.h
src/Application4/: Application.cpp  Application.h  BackgroundSolver.h  CMakeLists.txt  main.cpp
src/Application4/UI/: Interactive.cpp  Interactive.h  Simple.cpp
src/Benchmark/: CMakeLists.txt  Comparison.h  ConstitutionalGrader.h  Generator.h  Grader.h  MeanGrader.h  RMSGrader.h  benchmark.h  bestTheta.h  countInteractions.cpp  field.h  fieldPlot.h  gravitationalViewingSheet.h  main.cpp  plot.py  profile.cpp  random.h  test.cpp
src/Benchmark/Experiments/: compareLinearBVHDescentCriterion.cpp  compareSolversOnAGORAData.cpp  compareSolversOnMUGSData.cpp  compareSolversOnRandomData.cpp  compareThetaValues.cpp  compareTreeConstruction.cpp  compareTreeConstructionOnAGORAData.cpp  compareTreeConstructionOnRandomData.cpp  countInteractions.cpp  recordInteractions.cpp  sampleFieldTrees.cpp  sampleMultipoles.cpp
src/Benchmark/Graders/: ConstitutionalGrader.h  Grader.h  MeanGrader.h  RMSGrader.h
src/Benchmark/profiling/: main.cpp
src/Controller/: Application.cpp  Application.h  CMakeLists.txt  Config.cpp  Config.h  Controller.cpp  Controller.h  HeadlessController.cpp  HeadlessController.h  Logger.cpp  Logger.h  Parser.cpp  Parser.h
src/Model/: Body.cpp  Body.h  CMakeLists.txt  Entity.cpp  Entity.h  Handle.h  Model.h  Position.cpp  Position.h  Simulation.cpp  Simulation.h  Velocity.cpp  Velocity.h
src/Model/Drawable/: Color.h  Drawable.cpp  Drawable.h  Sphere.cpp  Sphere.h
src/Model/Physics/: ActiveElement.cpp  ActiveElement.h  PassiveElement.cpp  PassiveElement.h  Physics.h  Rule.cpp  Rule.h
src/Model/Solver/: Naive.cpp  Naive.h  Solver.h
src/NBody/: CMakeLists.txt
src/NBody/Graphics/: CMakeLists.txt  Color.cpp  Color.h  Sphere.cpp  Sphere.h
src/NBody/Interface/: CMakeLists.txt  Interface.h  Viewport.cpp  Viewport.h
src/NBody/Model/: CMakeLists.txt  Simulation.h  Velocity.h
src/NBody/Physics/: Acceleration.h  ActiveMass.cpp  ActiveMass.h  BoundingBox.h  CMakeLists.txt  Force.h  Gravity.cpp  Gravity.h  Mass.cpp  Mass.h  Multipole.h  MultipoleAcceleration.h  MultipoleMoment.h  PassiveMass.cpp  PassiveMass.h  Position.cpp  Position.h  Quadrupole.h  QuadrupoleAcceleration.h  Rule.h  SummaryType.h  SymmetricMatrix3.h  SymmetricTensor3.h  Velocity.cpp  Velocity.h
src/NBody/Simulation/: BoundingBox.h  CMakeLists.txt  Color.cpp  Color.h  Drawable.cpp  Drawable.h  EntityCollection.cpp  EntityCollection.h  Position.h  Runner.h  Simulation.cpp  Simulation.h  Solver.h  TypedDispatcher.h  Velocity.h
src/NBody/View/: ArcBall.cpp  ArcBall.h  ArcBallCamera.cpp  ArcBallCamera.h  ArcBallControllableCamera.cpp  ArcBallControllableCamera.h  CMakeLists.txt  Camera.cpp  Camera.h  GtkmmArcBallCamera.cpp  GtkmmArcBallCamera.h  InteractiveView.cpp  InteractiveView.h  Recorder.cpp  Recorder.h  Renderer.h  SimpleView.cpp  SimpleView.h  VideoOutputStream.cpp  VideoOutputStream.h  View.cpp  View.h
src/View/: Application.cpp  Application.h  Builder.cpp  Builder.h  CMakeLists.txt  HeadlessView.cpp  HeadlessView.h  Interactive.cpp  Interactive.h  InteractiveView.cpp  InteractiveView.h  MagnumViewport.cpp  MagnumViewport.h  Painter.cpp  Painter.h  SimulationViewport.cpp  SimulationViewport.h  View.h  ViewerView.cpp  ViewerView.h  ViewerWindow.cpp  ViewerWindow.h  viewer.glade
src/controller/: Window.cpp  layout.glade
src/model/: Body.cpp  Body.h  PhysicsContext.h
src/model/calculation/: Solver.h
src/model/tools/: BodyList.cpp  BodyList.h  Position.h  Velocity.cpp  Velocity.h  rgbaColor.cpp  rgbaColor.h
src/n_body/: Controller.cpp  Controller.h  Tracker.cpp  Tracker.h  better_body.cpp  better_body.h  better_simulation.h  body.cpp  body.h  drawable.cpp  drawable.h  main.cpp  octant.cpp  octant.h  relationship.cpp  relationship.h  simulation.cpp  simulation.h  threadSafe_octant.cpp  threadSafe_octant.h  tracker.cpp  tracker.h  viewport.cpp  viewport.h
src/n_body/Gtkmm/: nbody_application.cpp  nbody_application.h  nbody_window.cpp  nbody_window.h
src/n_body/Launcher/: Launcher.cpp  Launcher.h  PhysicsSettingsMenu.cpp  PhysicsSettingsMenu.h  RecorderSettingsMenu.cpp  RecorderSettingsMenu.h  ViewSettingsMenu.cpp  ViewSettingsMenu.h  ViewportSettingsMenu.cpp  ViewportSettingsMenu.h
src/n_body/Scenarios/: Preset.cpp  Preset.h  ScenarioStream.cpp  ScenarioStream.h
src/n_body/SignalsPOC/: POCController.cpp  POCController.h  POCModel.cpp  POCModel.h
src/n_body/controller/: Application.cpp  Application.h  Window.cpp  Window.h
src/n_body/interface/: Drawable.h  Viewport.cpp  Viewport.h  better_viewport.cpp  better_viewport.h  (+2 more)
src/view/: BodyAnimableObject.cpp  BodyAnimableObject.h  BodyDrawableObject.cpp  BodyDrawableObject.h  BodyObject.cpp  BodyObject.h  ColoredDrawable.cpp  ColoredDrawable.h  View.h  Viewport.cpp  Viewport.h
test/: CMakeLists.txt  bodies.cpp  bodyTest.cpp  main.cpp  test.cpp  testActiveElement.cpp  testAll.cpp  testBody.cpp  testColor.cpp  testDrawable.cpp  testEntity.cpp  testPassiveElement.cpp  testPosition.cpp  testSimulation.cpp  testVelocity.cpp
tests/: CMakeLists.txt  bodyTest.cpp  octantTest.cpp  simulationTest.cpp  testAll.cpp  threadSafe_octantTest.cpp
(+538 files in other folders)
